--- a/01_FinalModelsPlan.Rmd
+++ b/01_FinalModelsPlan.Rmd
@@ -60,11 +60,11 @@ do_priorsense = FALSE
 get_bayesfactor = FALSE
 check_models = FALSE # ! set to TRUE !
 
-stats_to_report = ifelse(
-  get_bayesfactor, 
-  c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'), 
-  c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
-)
+if (get_bayesfactor) {
+  stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
+} else {
+  stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS')
+}
 
 options(
   dplyr.print_max = 100, 
@@ -85,8 +85,8 @@ options(
 
 ####################### Model parameters #######################
 
-iterations = 2000 # 12'000 per chain to achieve 40'000
-warmup = 1000 # 2000
+iterations = 12000 # 12'000 per chain to achieve 40'000
+warmup = 2000 # 2000
 
 # NO AR!!!
 #corstr = 'ar'
@@ -761,6 +761,7 @@ for (i in 1:length(conds_eff)) {
   )
 }
 
+print('done')
 
 ```
 
